<resources>
    <string name="app_name">TeamCom</string>

    <!--activity_login_reg-->
    <string name="btnLogin">Login With Email</string>
    <string name="btnRegister">Register With Email</string>
    <string name="btnReset">Reset Password</string>
    <string name="btnCheck">Check Authentication</string>
    <string name="btnShowReg">Create An Account</string>
    <string name="btnShowLogin">Login To Your Account</string>
    <string name="hintLgnEmail">Email</string>
...

    <string name="account">Done for today?</string>
    <string name="menu_logout">Logout</string>


    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--fragment_settings-->
    <string name="txtRoles">Roles</string>
    <string name="txtMembers">Members</string>
    <string name="txtInvites">Invites</string>
    <string name="txtDetails">Channel Details</string>
    <string name="txtQueRem">Survey Settings</string>
    <string name="txtTaskStages">Task Stages</string>

    <!--fragment roles-->
    <string name="btnAddNewRole">Add New</string>
    <string name="btnAddNewConvo">Start New Chat</string>

    <!--fragment invites-->
    <string name="btnAddNewInv">Create Invite</string>
    <string name="hint_hoursActive">Expires In (Hrs)</string>
    <string name="hint_uses">Uses</string>
...
    <string name="projectDeets">Project Details</string>
    <string name="meetingDeets">Meeting Details</string>
    <string name="editMeeting">Edit Meeting</string>

    <string name="newTask">New Task</string>

    <string name="editRoleName">Role Name</string>
    <string name="stage1">Stage One Name</string>
    <string name="stage2">Stage Two Name</string>
    <string name="stage3">Stage Three Name</string>
    <string name="stage4">Stage Four Name</string>
    <string name="stage5">Stage Five Name</string>
    <string name="stage6">Stage Six Name</string>

    <string name="txtColorCode">Color Code [eg. #643663]</string>
    <string name="permAdmin">Admin</string>
    <string name="viewalllogs">View All Logs</string>
    <string name="manageRoles">Manage Roles</string>
    <string name="createRoles">Create Roles</string>
    <string name="viewRoles">View Roles</string>
    <string name="assignRoles">Assign Roles</string>
    <string name="viewTasks">View Tasks</string>
    <string name="createTasks">Create Tasks</string>
    <string name="createInvite">Create Channel Invites</string>
    <string name="viewInvites">View Channel Invites</string>
    <string name="editChannel">Edit Channel</string>

    <string name="createInvite1">Create New Invite</string>
    <string name="createGC">Create Groupchats</string>
    <string name="permKickUser">Kick Users</string>
    <string name="permPostOnFeed">Post On News Feed</string>
    <string name="permCreateGCInvite">Create Groupchat Invite</string>
    <string name="permAssignTasksToMembers">Assign Tasks To Members</string>
    <string name="permCreateMeetings">Create Meetings</string>
    <string name="permRequestMeetings">Request Meetings</string>
    <string name="permCreateProjects">Create Projects</string>
    <string name="permManageProjects">Manage Projects</string>
    <string name="permViewEvents">View Events</string>
    <string name="permCreateEvents">Create Events</string>
    <string name="permViewMembers">View Members Profiles</string>
    <string name="permViewMembersStats">View Members Statistics</string>
    <string name="addnewrole">Add Role</string>
    <string name="editRole">Save Changes</string>
    <string name="deleteRole">Delete Role</string>

    <string name="title_members_assignments">Role Assignment</string>


...
