...
                    android:hint="@string/txtColorCode"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textSize="20dp" />

                <ImageButton
                    android:id="@+id/btnColorPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
...
                android:fontFamily="sans-serif"
                android:text="Logs"
                android:textColor="@color/color_white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/permViewLogs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:background="@drawable/content_layout_backg"

...
                android:fontFamily="sans-serif"
                android:text="Roles"
                android:textColor="@color/color_white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/permManageRoles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/content_layout_backg"

                android:layout_marginTop="10dp"
                android:padding="10dp"
...
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:text="Tasks"
                android:textColor="@color/color_white"
                android:textSize="25sp" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/permViewTasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/content_layout_backg"

                android:layout_marginTop="10dp"
                android:padding="10dp"
...
                android:textColor="@color/color_white"
                android:textSize="20dp"
                android:thumb="@drawable/thumb_switch"
                app:track="@drawable/new_switch" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/permCreateTasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/createTasks"
                android:background="@drawable/content_layout_backg"
...
                android:fontFamily="sans-serif"
                android:text="Channel"
                android:textColor="@color/color_white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/permCreateInvite"
                android:background="@drawable/content_layout_backg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/createInvite"
...
                android:fontFamily="sans-serif"
                android:text="Conversations"
                android:textColor="@color/color_white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/permCreateGroupChats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/content_layout_backg"

                android:layout_marginTop="10dp"
                android:padding="10dp"
...
                    android:backgroundTint="@color/google_red"
                    android:textColor="@color/color_white"
                    android:text="@string/deleteRole" />
            </RelativeLayout>

            <Button
                android:id="@+id/btnCreateNewRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:backgroundTint="@color/color_1"
                android:padding="10dp"
                android:text="@string/addnewrole"
...
